@@ -38,8 +38,8 @@ Readonly::Scalar my $TILE_METRICS_INTEROP_CODES => {'cluster density'    => 100,
                                                      'version3_cluster_counts' => ord('t'),
                                                      };
 
-Readonly::Scalar my $BOTSEQ_TAG_LENGTH            => 3; # length of BotSeq tag at start of read
-Readonly::Scalar my $BOTSEQ_SKIP_LENGTH           => 4; # Number of bases to skip after the BotSeq tag
+Readonly::Scalar my $DUPLEXSEQ_TAG_LENGTH         => 3; # length of Duplex-Seq tag at start of read
+Readonly::Scalar my $DUPLEXSEQ_SKIP_LENGTH        => 4; # Number of bases to skip after the Duplex-Seq tag
 
 sub generate {
   my $self = shift;
@@ -385,11 +385,11 @@ sub _generate_command_params {
     }
   }
 
-  if($self->_is_botseq) {
-    $self->info(q{P4 stage1 analysis of a BotSeq lane});
+  if($self->_is_duplexseq) {
+    $self->info(q{P4 stage1 analysis of a Duplex-Seq lane});
 
     if (!$self->is_paired_read) {
-      $self->logcroak('A BotSeq lane should be paired ', $position);
+      $self->logcroak('A Duplex-Seq lane should be paired ', $position);
     }
 
     my @i2b_bc_read = ();
@@ -402,12 +402,12 @@ sub _generate_command_params {
 
     # read 1
     my($first, $final) = $self->read1_cycle_range();
-    push @i2b_bc_read, q{1},q{2};
-    push @i2b_first_index_0, qq{$first},qq{$first};
-    push @i2b_final_index_0, $first+$BOTSEQ_TAG_LENGTH-1,$first+$BOTSEQ_TAG_LENGTH-1;
-    push @i2b_bc_seq_val, q{rb},q{mb};
-    push @i2b_bc_qual_val, q{rq},q{mq};
-    push @i2b_first_0, $first+$BOTSEQ_TAG_LENGTH+$BOTSEQ_SKIP_LENGTH;
+    push @i2b_bc_read, q{1},q{2},q{1};
+    push @i2b_first_index_0, qq{$first},qq{$first},$first+$DUPLEXSEQ_TAG_LENGTH;
+    push @i2b_final_index_0, $first+$DUPLEXSEQ_TAG_LENGTH-1,$first+$DUPLEXSEQ_TAG_LENGTH-1,$first+$DUPLEXSEQ_TAG_LENGTH+$DUPLEXSEQ_SKIP_LENGTH-1;
+    push @i2b_bc_seq_val, q{rb},q{mb},q{br};
+    push @i2b_bc_qual_val, q{rq},q{mq},q{bq};
+    push @i2b_first_0, $first+$DUPLEXSEQ_TAG_LENGTH+$DUPLEXSEQ_SKIP_LENGTH;
     push @i2b_final_0, qq{$final};
 
     # index read(s)
@@ -432,12 +432,12 @@ sub _generate_command_params {
 
     # read 2
     ($first, $final) = $self->read2_cycle_range();
-    push @i2b_bc_read, q{2},q{1};
-    push @i2b_first_index_0, qq{$first},qq{$first};
-    push @i2b_final_index_0, $first+$BOTSEQ_TAG_LENGTH-1, $first+$BOTSEQ_TAG_LENGTH-1;
-    push @i2b_bc_seq_val, q{rb},q{mb};
-    push @i2b_bc_qual_val, q{rq},q{mq};
-    push @i2b_first_0, $first+$BOTSEQ_TAG_LENGTH+$BOTSEQ_SKIP_LENGTH;
+    push @i2b_bc_read, q{2},q{1},q{2};
+    push @i2b_first_index_0, qq{$first},qq{$first},$first+$DUPLEXSEQ_TAG_LENGTH;
+    push @i2b_final_index_0, $first+$DUPLEXSEQ_TAG_LENGTH-1,$first+$DUPLEXSEQ_TAG_LENGTH-1,$first+$DUPLEXSEQ_TAG_LENGTH+$DUPLEXSEQ_SKIP_LENGTH-1;
+    push @i2b_bc_seq_val, q{rb},q{mb},q{br};
+    push @i2b_bc_qual_val, q{rq},q{mq},q{bq};
+    push @i2b_first_0, $first+$DUPLEXSEQ_TAG_LENGTH+$DUPLEXSEQ_SKIP_LENGTH;
     push @i2b_final_0, qq{$final};
     
     $p4_params{i2b_bc_read}       = join q{,}, @i2b_bc_read;
@@ -611,18 +611,19 @@ sub _build__extra_tradis_transposon_read {
   return ($num_extra > 0) ? 1 : 0;
 }
 
-has q{_is_botseq} => (
+has q{_is_duplexseq} => (
                              isa        => q{Bool},
                              is         => q{rw},
                              lazy_build => 1,
                             );
-sub _build__is_botseq {
+sub _build__is_duplexseq {
   my $self = shift;
 
-  my $is_botseq = any {$_->library_type && $_->library_type =~ /BotSeq/smx}
+  # I've restricted this to library_types which exactly match Duplex-Seq to exclude the old library_type Bidirectional Duplex-seq
+  my $is_duplexseq = any {$_->library_type && $_->library_type eq [Duplex-Seq]}
                   $self->lims->descendants();
 
-  return $is_botseq;
+  return $is_duplexseq;
 }
 
 sub _parsing_interop {
