@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - BotSeq renamed Duplex-Seq, which is the new library_type
+   previously skipped bases and qualities are now retained in two new tags
  - Added BotSeq analysis - Note I've assumed the library_type matches BotSeq
  
 release 57.5.1
